# whatsapp-orchestrator

./: .env  .env.example  .gitignore  GUIA_COMPLETO_EXECUCAO.md  GUIA_EXECUCAO_LOCAL.md  MUDANCAS_REALIZADAS.md  Makefile  README.md  TESTING.md  debug_router.py  debug_state_load.py  env.example  pyproject.toml  setup.sh  test_comprehensive_production.py  test_context.py  test_conversation.py  test_lambda_compliance.py  test_local.py  test_payload_compliance.py  test_preserve_data.py  test_production.py  test_quick.sh  test_report_20250923_140106.json  test_webhook_direct.py  test_webhook_scenarios.py
app/: __init__.py
app/api/: __init__.py  deps.py  main.py  middleware.py  routes.py  routes_dynamo.py  schemas.py  state_helpers.py
app/graph/: __init__.py  builder.py  clinical_extractor.py  fiscal.py  intent_llm.py  rag.py  router.py  semantic_classifier.py  state.py  tools.py
app/graph/flows/: __init__.py  (+5 more)
app/infra/: __init__.py  cache.py  circuit_breaker.py  confirm.py  dynamo_client.py  dynamo_state.py  http.py  idempotency.py  langfuse_integration.py  locks.py  logging.py  memory.py  redis_checkpointer.py  redis_client.py  resume.py  state_persistence.py  store.py  timeutils.py  tpc.py
app/llm/: __init__.py  classifier.py  extractor.py  fiscal_llm.py
app/rag/: __init__.py  pinecone_client.py  sheets_sync.py
docs/: CONFIGURACAO_LOCAL.md  DIAGRAMA_ARQUITETURA.md  DYNAMO_MIGRATION.md  FUNCIONAMENTO_DETALHADO.md  GUIA_TESTES.md  REVISAO_COMPLETA.md  grafo.mmd
references/: getNoteReport.js  getschedulestarted.js  updatereportsummaryad.js  updateworkscheduleresponse.js
references/updateclinicaldata/: ARCHITECTURE.md  BUSINESS_RULES.md  CHANGELOG.md  README.md  check-structure.sh  deploy.sh  samconfig.toml  template.yaml  test.sh
scripts/: check_dynamo_tables.py  create_dynamo_tables.py  generate_flow_diagram.py  generate_flow_diagram_simple.py  limpar_estado_teste.py
tests/: conftest.py  demo_semantic_classification.py  test_clinical_extractor.py  test_clinico.py  test_complete_setup.py  test_confirm.py  test_dynamo_setup.py  test_dynamo_store.py  test_example.py  test_local.py  test_router.py  test_semantic_classifier.py  test_tpc.py
(+31 files in other folders)
